# claude-swarm-monitor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  bootstrap-claude-swarm.sh
src/: app.rs  docker.rs  main.rs  parser.rs  state.rs  ui.rs  watcher.rs
